tests/spec/emit/snapshots/map_ref_newtype_nested_field_append.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Inner { items: Slice<int> }
  struct Wrap(Inner)
  
  fn main() {
    let mut w = Wrap(Inner { items: [1] })
    let mut m = Map.new<string, mut Ref<Wrap>>()
    m["a"] = &w
    let Some(r) = m.get("a") else { return; };
    let mut inner = Inner { items: r.0.items.clone() }
    inner.items = inner.items.append(2)
    r.* = Wrap(inner)
    let _ = w
  }
---
package main

import "slices"

type Inner struct {
	items []int
}

type Wrap Inner

func main() {
	w := Wrap(Inner{items: []int{1}})
	m := make(map[string]*Wrap)
	m["a"] = &w
	r, ok := m["a"]
	if !ok {
		return
	}
	inner := Inner{items: slices.Clone(Inner(*r).items)}
	inner.items = append(inner.items, 2)
	*r = Wrap(inner)
	_ = w
}
