tests/spec/emit/snapshots/map_ref_newtype_nested_field_assign.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Inner { x: int }
  struct Wrap(Inner)
  
  fn main() {
    let mut w = Wrap(Inner { x: 0 })
    let mut m = Map.new<string, mut Ref<Wrap>>()
    m["a"] = &w
    let Some(r) = m.get("a") else { return; };
    let mut inner = r.0
    inner.x = 1
    r.* = Wrap(inner)
    let _ = w
  }
---
package main

type Inner struct {
	x int
}

type Wrap Inner

func main() {
	w := Wrap(Inner{x: 0})
	m := make(map[string]*Wrap)
	m["a"] = &w
	r, ok := m["a"]
	if !ok {
		return
	}
	inner := Inner(*r)
	inner.x = 1
	*r = Wrap(inner)
	_ = w
}
