tests/spec/emit/snapshots/map_ref_newtype_slice_append.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Wrap(Slice<int>)
  
  fn main() {
    let mut w = Wrap([1])
    let mut m = Map.new<string, mut Ref<Wrap>>()
    m["a"] = &w
    let Some(r) = m.get("a") else { return; };
    r.* = Wrap(r.0.append(2))
    let _ = w
  }
---
package main

type Wrap []int

func main() {
	w := Wrap([]int{1})
	m := make(map[string]*Wrap)
	m["a"] = &w
	r, ok := m["a"]
	if !ok {
		return
	}
	ref := r
	recv := ([]int)(*r)
	*ref = Wrap(append(recv[:len(recv):len(recv)], 2))
	_ = w
}
