tests/spec/emit/snapshots/map_struct_field_assignment.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Player {\n  name: string,\n  score: int,\n}\n\nfn test() {\n  let mut players = Map.new<string, Player>()\n  players[\"alice\"] = Player { name: \"Alice\", score: 0 }\n  let mut entry = players[\"alice\"]\n  entry.score = 100\n  players[\"alice\"] = entry\n}\n"
---
package main

type Player struct {
	name  string
	score int
}

func test() {
	players := make(map[string]Player)
	players["alice"] = Player{
		name:  "Alice",
		score: 0,
	}
	entry := players["alice"]
	entry.score = 100
	players["alice"] = entry
}
