tests/spec/emit/snapshots/map_type_definition.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test(m: Map<string, int>) -> int {
    m["key"]
  }
---
package main

func test(m map[string]int) int {
	return m["key"]
}
